--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- tähän tulee sivun sisältö -->
     <header>
         <h1 style="text-align: right;">Pakilan Shakkikerho</h1>
+        <img class="header_img" src="shakki.png">
         <nav class="navbar">
             <button class="burger" id="burger">
                 &#9776; <!-- This is the hamburger icon -->
