--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <title>Pakilan Shakkikerho</title>
-    <meta http-equiv="X-UA-Compatible">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
 
     <meta name="author" content="AF">
-    <meta name="description" content="Pakilan Shakkikerho kokoontuu Pakilan VPK:n tiloissa ------">
+    <meta name="description" content="Pakilan Shakkikerho kokoontuu Pakinkylän VPK:n tiloissa ------">
     <!-- lisää meta-elementtejä -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
     <!-- tähän tulee sivun sisältö -->
     <header>
         <h1 style="text-align: right;">Pakilan Shakkikerho</h1>
-        <img class="header_img" src="shakki.png">
+        <img class="header_img" src="shakki.png" alt="shakkilauta">
         <nav class="navbar">
             <button class="burger" id="burger">
                 &#9776; <!-- This is the hamburger icon -->
@@ -48,19 +48,25 @@
 
 
         <p>Tervetuloa Pakilan Shakkikerhon sivuille.</p>
-        
+
 
         <div class="flex-container">
             <div class="flex-item">
                 <h2>Pelit</h2>
-                <p>Pelaamme 10 min. +5 sek ajoilla.<br>Torstaisin kello 19-22<br>Kokoonnumme Pakinkylän VPK:n tiloissa. Ellei erikseen mainita.<br>
-                    Pakilantie 64, 00660 Helsinki<br><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1980.4424216196903!2d24.924882829216298!3d60.23960000407033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692082b66dae8b5%3A0xac988a6af5ecf98d!2sPakinkyl%C3%A4n%20VPK%20R.Y.!5e0!3m2!1sen!2sfi!4v1727603018969!5m2!1sen!2sfi" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p> 
-                    
+                <p>Pelaamme 10 min. +5 sek ajoilla.<br>Torstaisin kello 19-22<br>Kokoonnumme Pakinkylän VPK:n tiloissa.
+                    Ellei erikseen mainita.<br>
+                    Pakilantie 64, 00660 Helsinki<br><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1980.4424216196903!2d24.924882829216298!3d60.23960000407033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692082b66dae8b5%3A0xac988a6af5ecf98d!2sPakinkyl%C3%A4n%20VPK%20R.Y.!5e0!3m2!1sen!2sfi!4v1727603018969!5m2!1sen!2sfi"
+                        width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+
             </div>
 
             <div class="flex-item">
                 <h2>Jäsenille</h2>
-                <p>Vuosittainen jäsenmaksumme on 40 euroa, alle 18-vuotiailta ja opiskelijoilta 20 euroa. Muistathan hommata <a href="https://www.shakkiliitto.fi/ostamassa-lisenssia/">kilpailu lisenssin</a> mikäli aiot osallistua kilpailuihin.</p>
+                <p>Vuosittainen jäsenmaksumme on 40 euroa, alle 18-vuotiailta ja opiskelijoilta 20 euroa. Muistathan
+                    hommata <a href="https://www.shakkiliitto.fi/ostamassa-lisenssia/">kilpailu lisenssin</a> mikäli
+                    aiot osallistua kilpailuihin.</p>
             </div>
 
 
