--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 
             </div>
+            <div class="flex-item">
+                <h2>Uudet pelaajat</h2>
+                <p>Uusille pelaajille suosittelemme lämpimästi Lauttasaaren shakkikerhon järjestämää ilmaista
+                    opastusta.<br>
+                    Keskiviikkoisin klo 18:00 Lauttasaaren kirkolla,<br>Myllykallionrinne 1 C, 00200 Helsinki<br><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1985.3492954039234!2d24.867356685454162!3d60.158396189909546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920a66dec55555%3A0x53107f2e0829c553!2sMyllykallionrinne%201c%2C%2000200%20Helsinki!5e0!3m2!1sen!2sfi!4v1727765468127!5m2!1sen!2sfi"
+                        width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+            </div>
 
             <div class="flex-item">
                 <h2>Jäsenille</h2>
