--- a/ota_yhteytta.html
+++ b/ota_yhteytta.html
@@ -46,42 +46,24 @@
     </header>
     <main>
 
-        <h3>Tervetuloa Pakilan Shakkikerhon sivuille.</h3>
-
         <div class="flex-container">
             <div class="flex-item">
-                <h2>Pelit</h2>
-                <p>Pelaamme 10 min. +5 sek ajoilla.<br>Torstaisin kello 19-21<br>
-                    Kokoonnumme Pakinkylän VPK:n tiloissa. Ellei erikseen mainita.<br>
-                    Pakilantie 64, 00660 Helsinki
+                <h2>Ota yhteyttä</h2>
+                <p>Email:<a href="mailto:do.not.contact@myy.haaga-helia.fi">do.not.contact@myy.haaga-helia.fi</a><br>
+                    puh: 040 123 4567
+                </p>
+            </div>
+            <div class="flex-item">
+                <h2>Pakilan Shakkikerho</h2>
+                <p>Pakinkylän VPK<br>
+                    Pakilantie 64 <br>
+                    00660 Helsinki
                 </p>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1980.4424216196903!2d24.924882829216298!3d60.23960000407033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692082b66dae8b5%3A0xac988a6af5ecf98d!2sPakinkyl%C3%A4n%20VPK%20R.Y.!5e0!3m2!1sen!2sfi!4v1727603018969!5m2!1sen!2sfi"
                     width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
-            </div>
-
-            <div class="flex-item">
-                <h2>Uudet pelaajat</h2>
-                <p>Uusille pelaajille suosittelemme lämpimästi Lauttasaaren shakkikerhon järjestämää ilmaista
-                    opastusta.<br>
-                    Keskiviikkoisin klo 17:00 Lauttasaaren kirjastoon,<br>
-                    Pajalahdentie 10 A, 00200 Helsinki
-                </p>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1180.4774361711702!2d24.881621408258077!3d60.15890757305336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920a5ce85bbdf1%3A0x2423ca7e36022b69!2sLauttasaaren%20kirjasto!5e0!3m2!1sen!2sfi!4v1728156330613!5m2!1sen!2sfi"
-                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
-            </div>
-
-            <div class="flex-item">
-                <h2>Jäsenille</h2>
-                <p>Vuosittainen jäsenmaksumme on 40 euroa, alle 18-vuotiailta ja opiskelijoilta 20 euroa. Muistathan
-                    hommata <a href="https://www.shakkiliitto.fi/ostamassa-lisenssia/">kilpailu lisenssin</a> mikäli
-                    aiot osallistua kilpailuihin.
-                </p>
             </div>
         </div>
     </main>
