--- a/tapahtumat.html
+++ b/tapahtumat.html
@@ -19,109 +19,113 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <!-- tähän tulee sivun sisältö -->
+        <header>
+            <h1 style="text-align: right;">Pakilan Shakkikerho</h1>
+            <img class="header_img" src="shakki.png" alt="shakkilauta">
+            <nav class="navbar">
+                <button class="burger" id="burger">
+                    &#9776; <!-- This is the hamburger icon -->
+                </button>
+                <ul class="nav-links" id="nav-links">
+                    <li>
+                        <a href="index.html">Etusivu</a>
+                    </li>
+                    <li>
+                        <a href="muut.html">Muut kerhot</a>
+                    </li>
+                    <li>
+                        <a href="tapahtumat.html">Tapahtumat</a>
+                    </li>
+                    <li>
+                        <a href="ota_yhteytta.html">Ota Yhteyttä</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
 
-    <!-- tähän tulee sivun sisältö -->
-    <header>
-        <h1 style="text-align: right;">Pakilan Shakkikerho</h1>
-        <img class="header_img" src="shakki.png" alt="shakkilauta">
-        <nav class="navbar">
-            <button class="burger" id="burger">
-                &#9776; <!-- This is the hamburger icon -->
-            </button>
-            <ul class="nav-links" id="nav-links">
-                <li>
-                    <a href="index.html">Etusivu</a>
-                </li>
-                <li>
-                    <a href="muut.html">Muut kerhot</a>
-                </li>
-                <li>
-                    <a href="tapahtumat.html">Tapahtumat</a>
-                </li>
-                <li>
-                    <a href="ota_yhteytta.html">Ota Yhteyttä</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="flex-container">
-            <div class="flex-item">
-                <h2>Shakkiareenan Tapahtumat</h2>
-                <p>Hiomotie 10, 2.krs, 00380 Helsinki</p>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d589.1692701701098!2d24.875157456636135!3d60.21844340947468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x468df6197b94ab99%3A0x5bc859a021a4b054!2sShakkiareena!5e0!3m2!1sen!2sfi!4v1728147766268!5m2!1sen!2sfi"
-                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
+            <div class="flex-container">
+                <div class="flex-item">
+                    <h2>Shakkiareenan Tapahtumat</h2>
+                    <p>Hiomotie 10, 2.krs, 00380 Helsinki</p>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d589.1692701701098!2d24.875157456636135!3d60.21844340947468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x468df6197b94ab99%3A0x5bc859a021a4b054!2sShakkiareena!5e0!3m2!1sen!2sfi!4v1728147766268!5m2!1sen!2sfi"
+                        width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+
+                <div class="flex-item">
+                    <h2>Gambiitin vartit Areenalla Keskiviikkoisin</h2>
+                    <p>Ajankohta: 04.09.2024-18.12.2024<br>
+                        Osanoton varmistus: Pelipaikalla 18.10 mennessä<br>
+                        Kierrokset: Viisi kierrosta alkaen klo 18.15<br>
+                        Pelipaikka: Shakkiareena, Hiomotie 10, 2.krs, 00380 Helsinki<br>
+                        Miettimisaika: 10 min + 5 sek/siirto<br>
+                        <a href="https://www.shakkiliitto.fi/tapahtuma/gambiitin-vartit-areenalla-2/">Lisätietoja</a>
+                    </p>
+                </div>
+
+                <div class="flex-item">
+                    <h2>Areenan pitkän pelin ilta (HSL)</h2>
+                    <p>Ajankohta: 08.10.2024<br>
+                        Osanoton varmistus: Pelipaikalla klo 16:30-16:45<br>
+                        Kierrokset: pelataan yksi peli klo 17:00 alkaen<br>
+                        Pelipaikka: Shakkiareena, Hiomotie 10, 2.krs, 00380 Helsinki<br>
+                        Miettimisaika: 70 min + 30 sek/siirto<br>
+                        <a
+                            href="https://www.shakkiliitto.fi/tapahtuma/areenan-pitkan-pelin-ilta-hsl-12/">Lisätietoja</a>
+                    </p>
+                </div>
+
+                <div class="flex-item">
+                    <h2>Joukkuepikashakin Helsingin mestaruus 2024, M-ryhmä</h2>
+                    <p>Ajankohta: 14.10.2024<br>
+                        Osanoton varmistus ja kokoonpanon ilmoittaminen pelipaikalla klo 17:45 mennessä.<br>
+                        Kierrokset: Klo 18.00 - n. 21.30<br>
+                        Pelipaikka: Shakkiareena, Hiomotie 10, 2.krs, 00380 Helsinki<br>
+                        Miettimisaika: 3 min + 2 sek siirtolisä/siirto<br>
+                        <a
+                            href="https://www.shakkiliitto.fi/tapahtumat/joukkuepikashakin-helsingin-mestaruus-2024-m-ryhma/">Lisätietoja</a>
+                    </p>
+                </div>
+
+                <div class="flex-item">
+                    <h2>Joukkuepikashakin Helsingin mestaruus 2024, A-ryhmä</h2>
+                    <p>Ajankohta: 21.10.2024<br>
+                        Osanoton varmistus ja kokoonpanon ilmoittaminen pelipaikalla klo 17:45 mennessä.<br>
+                        Kierrokset: Klo 18.00 - n. 21.30<br>
+                        Pelipaikka: Shakkiareena, Hiomotie 10, 2.krs, 00380 Helsinki<br>
+                        Miettimisaika: 3 min + 2 sek siirtolisä/siirto<br>
+                        <a
+                            href="https://www.shakkiliitto.fi/tapahtumat/joukkuepikashakin-helsingin-mestaruus-2024-a-ryhma/">Lisätietoja</a>
+                    </p>
+                </div>
+                <div class="flex-item">
+                    <h2>Enemmän tapahtumia</h2>
+                    <p>Jos Shakkiareenan tapahtumat eivät riitä tai asut muulla paikkakunnalla niin voit tarkistaa lisää
+                        tapahtumia <a href="https://www.shakkiliitto.fi/kilpailukalenteri-2024/">Suomen shakkiliiton</a>
+                        sivuilta.<br>
+
+                    </p>
+                </div>
             </div>
 
-            <div class="flex-item">
-                <h2>Gambiitin vartit Areenalla Keskiviikkoisin</h2>
-                <p>Ajankohta: 04.09.2024-18.12.2024<br>
-                    Osanoton varmistus: Pelipaikalla 18.10 mennessä<br>
-                    Kierrokset: Viisi kierrosta alkaen klo 18.15<br>
-                    Pelipaikka: Shakkiareena, Hiomotie 10, 2.krs, 00380 Helsinki<br>
-                    Miettimisaika: 10 min + 5 sek/siirto<br>
-                    <a href="https://www.shakkiliitto.fi/tapahtuma/gambiitin-vartit-areenalla-2/">Lisätietoja</a>
-                </p>
-            </div>
-
-            <div class="flex-item">
-                <h2>Areenan pitkän pelin ilta (HSL)</h2>
-                <p>Ajankohta: 08.10.2024<br>
-                    Osanoton varmistus: Pelipaikalla klo 16:30-16:45<br>
-                    Kierrokset: pelataan yksi peli klo 17:00 alkaen<br>
-                    Pelipaikka: Shakkiareena, Hiomotie 10, 2.krs, 00380 Helsinki<br>
-                    Miettimisaika: 70 min + 30 sek/siirto<br>
-                    <a href="https://www.shakkiliitto.fi/tapahtuma/areenan-pitkan-pelin-ilta-hsl-12/">Lisätietoja</a>
-                </p>
-            </div>
-
-            <div class="flex-item">
-                <h2>Joukkuepikashakin Helsingin mestaruus 2024, M-ryhmä</h2>
-                <p>Ajankohta: 14.10.2024<br>
-                    Osanoton varmistus ja kokoonpanon ilmoittaminen pelipaikalla klo 17:45 mennessä.<br>
-                    Kierrokset: Klo 18.00 - n. 21.30<br>
-                    Pelipaikka: Shakkiareena, Hiomotie 10, 2.krs, 00380 Helsinki<br>
-                    Miettimisaika: 3 min + 2 sek siirtolisä/siirto<br>
-                    <a href="https://www.shakkiliitto.fi/tapahtumat/joukkuepikashakin-helsingin-mestaruus-2024-m-ryhma/">Lisätietoja</a>
-                </p>
-            </div>
-
-            <div class="flex-item">
-                <h2>Joukkuepikashakin Helsingin mestaruus 2024, A-ryhmä</h2>
-                <p>Ajankohta: 21.10.2024<br>
-                    Osanoton varmistus ja kokoonpanon ilmoittaminen pelipaikalla klo 17:45 mennessä.<br>
-                    Kierrokset: Klo 18.00 - n. 21.30<br>
-                    Pelipaikka: Shakkiareena, Hiomotie 10, 2.krs, 00380 Helsinki<br>
-                    Miettimisaika: 3 min + 2 sek siirtolisä/siirto<br>
-                    <a href="https://www.shakkiliitto.fi/tapahtumat/joukkuepikashakin-helsingin-mestaruus-2024-a-ryhma/">Lisätietoja</a>
-                </p>
-            </div>
-            <div class="flex-item">
-                <h2>Enemmän tapahtumia</h2>
-                <p>Jos Shakkiareenan tapahtumat eivät riitä tai asut muulla paikkakunnalla niin voit tarkistaa lisää
-                    tapahtumia <a href="https://www.shakkiliitto.fi/kilpailukalenteri-2024/">Suomen shakkiliiton</a>
-                    sivuilta.<br>
-
-                </p>
-            </div>
-
-        </div>
-    </main>
-    <footer>
-        <p>Pakilan Shakkikerho<br>
-            Pakilantie 64 <br>
-            00660 Helsinki
-        </p>
-    </footer>
-    <script>
-        document.getElementById('burger').addEventListener('click', function () {
-            document.getElementById('nav-links').classList.toggle('show');
-        });
-    </script>
-
+        </main>
+        <footer>
+            <p>Pakilan Shakkikerho<br>
+                Pakilantie 64 <br>
+                00660 Helsinki
+            </p>
+        </footer>
+        <script>
+            document.getElementById('burger').addEventListener('click', function () {
+                document.getElementById('nav-links').classList.toggle('show');
+            });
+        </script>
+    </div>
 </body>
 
 </html>
