--- a/ota_yhteytta.html
+++ b/ota_yhteytta.html
@@ -18,69 +18,67 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
-    <div class="wrapper">
-        <!-- tähän tulee sivun sisältö -->
-        <header>
-            <h1 style="text-align: right;">Pakilan Shakkikerho</h1>
-            <img class="header_img" src="shakki.png" alt="shakkilauta">
-            <nav class="navbar">
-                <button class="burger" id="burger">
-                    &#9776; <!-- This is the hamburger icon -->
-                </button>
-                <ul class="nav-links" id="nav-links">
-                    <li>
-                        <a href="index.html">Etusivu</a>
-                    </li>
-                    <li>
-                        <a href="muut.html">Muut kerhot</a>
-                    </li>
-                    <li>
-                        <a href="tapahtumat.html">Tapahtumat</a>
-                    </li>
-                    <li>
-                        <a href="ota_yhteytta.html">Ota Yhteyttä</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <main>
+<body class="wrapper">
+    <!-- tähän tulee sivun sisältö -->
+    <header>
+        <h1 style="text-align: right;">Pakilan Shakkikerho</h1>
+        <img class="header_img" src="shakki.png" alt="shakkilauta">
+        <nav class="navbar">
+            <button class="burger" id="burger">
+                &#9776; <!-- This is the hamburger icon -->
+            </button>
+            <ul class="nav-links" id="nav-links">
+                <li>
+                    <a href="index.html">Etusivu</a>
+                </li>
+                <li>
+                    <a href="muut.html">Muut kerhot</a>
+                </li>
+                <li>
+                    <a href="tapahtumat.html">Tapahtumat</a>
+                </li>
+                <li>
+                    <a href="ota_yhteytta.html">Ota Yhteyttä</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
 
-            <div class="flex-container">
-                <div class="flex-item">
-                    <h2>Ota yhteyttä</h2>
-                    <p>Email:<a
-                            href="mailto:do.not.contact@myy.haaga-helia.fi">do.not.contact@myy.haaga-helia.fi</a><br>
-                        puh: 040 123 4567
-                    </p>
-                </div>
-                <div class="flex-item">
-                    <h2>Pakilan Shakkikerho</h2>
-                    <p>Pakinkylän VPK<br>
-                        Pakilantie 64 <br>
-                        00660 Helsinki
-                    </p>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1980.4424216196903!2d24.924882829216298!3d60.23960000407033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692082b66dae8b5%3A0xac988a6af5ecf98d!2sPakinkyl%C3%A4n%20VPK%20R.Y.!5e0!3m2!1sen!2sfi!4v1727603018969!5m2!1sen!2sfi"
-                        width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
-                </div>
+        <div class="flex-container">
+            <div class="flex-item">
+                <h2>Ota yhteyttä</h2>
+                <p>Email:<a href="mailto:do.not.contact@myy.haaga-helia.fi">do.not.contact@myy.haaga-helia.fi</a><br>
+                    puh: 040 123 4567
+                </p>
             </div>
+            <div class="flex-item">
+                <h2>Pakilan Shakkikerho</h2>
+                <p>Pakinkylän VPK<br>
+                    Pakilantie 64 <br>
+                    00660 Helsinki
+                </p>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1980.4424216196903!2d24.924882829216298!3d60.23960000407033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692082b66dae8b5%3A0xac988a6af5ecf98d!2sPakinkyl%C3%A4n%20VPK%20R.Y.!5e0!3m2!1sen!2sfi!4v1727603018969!5m2!1sen!2sfi"
+                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </div>
 
-        </main>
-        <footer>
-            <p>Pakilan Shakkikerho<br>
-                Pakilantie 64 <br>
-                00660 Helsinki
-            </p>
-        </footer>
-        <script>
-            document.getElementById('burger').addEventListener('click', function () {
-                document.getElementById('nav-links').classList.toggle('show');
-            });
-        </script>
-    </div>
+    </main>
+    <footer>
+        <p>Pakilan Shakkikerho<br>
+            Pakilantie 64 <br>
+            00660 Helsinki
+        </p>
+    </footer>
+    <script>
+        document.getElementById('burger').addEventListener('click', function () {
+            document.getElementById('nav-links').classList.toggle('show');
+        });
+    </script>
+
 </body>
 
 </html>
